[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Following the hypermodern Python article"
authors = ["Ashley Felton <ashley@ropable.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ropable/hypermodern-python"
repository = "https://github.com/ropable/hypermodern-python"
keywords = ["hypermodern", "python"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

