[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Following the hypermodern Python article"
authors = ["Ashley Felton <ashley@ropable.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ropable/hypermodern-python"
repository = "https://github.com/ropable/hypermodern-python"
keywords = ["hypermodern", "python"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 70
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

